Added Subscription form functionality in create non-ror institute page

--- a/templates/institutions/create-institution.html
+++ b/templates/institutions/create-institution.html
@@ -55,7 +55,11 @@
             </div>
 
             <div class="w-50">
-                <label for="inquiry_type">Inquiry type</label><br>
+                <label for="inquiry_type">Inquiry type</label>
+                <div class="tooltip"><strong>i</strong>
+                    <span class="tooltiptext">An institution inquiry type allows you to select the desired role for the subscription process.</span>
+                </div>
+                <br>
                 {{ subscription_form.inquiry_type }}
             </div>
         </div>
