--- a/templates/institutions/create-custom-institution.html
+++ b/templates/institutions/create-custom-institution.html
@@ -44,9 +44,19 @@
             </div>
         </div>
 
-        <div>
-            <label class="pad-top-1-5" for="country">Country</label><br>
-            {{ noror_form.country }}                
+        <div class="margin-top-8 w-100 flex-this">
+            <div class="w-50 margin-right-1">
+                <label class="pad-top-1-5" for="country">Country</label><br>
+                {{ noror_form.country }}
+            </div>
+            <div class="w-50">
+                <label for="inquiry_type">Inquiry type</label>
+                <div class="tooltip"><strong>i</strong>
+                    <span class="tooltiptext">An institution inquiry type allows you to select the desired role for the subscription process.</span>
+                </div>
+                <br>
+                {{ subscription_form.inquiry_type }}
+            </div>
         </div>
 
         <div class="w-100">
@@ -60,6 +70,18 @@
                 {{ noror_form.description }}
             </div>
             <small id="charCount" class="block text-align-right">200/200</small>
+        </div>
+
+        <div class="w-100 flex-this">
+            <div class="w-50 margin-right-1">
+                <label class="pad-top-1-5" for="city_town">Contact name</label><br>
+                {{ noror_form.contact_name }}
+            </div>
+
+            <div class="w-50">
+                <label for="state_province_region">Contact Email</label><br>
+                {{ noror_form.contact_email }}
+            </div>
         </div>
 
         <div class="flex-this space-between">
