feat: changed title from "Community Boundary" to "Community Location"

--- a/templates/public.html
+++ b/templates/public.html
@@ -109,7 +109,7 @@
 
         {% if community.boundary.coordinates %}
         <div>
-            <h3>Community Boundary</h3>
+            <h3>Community Location</h3>
             <iframe src="{% url 'community-boundary-view' community.id %}"
                     style="width:800px; height: 500px;">
             </iframe>
