--- a/templates/researchers/connect-researcher.html
+++ b/templates/researchers/connect-researcher.html
@@ -1,5 +1,17 @@
 {% extends 'register-base.html' %} {% block title %} Connect {% endblock %} {% load static %} {% block card %}
-    <!-- import ORCiD Widget -->
+<script src="https://www.google.com/recaptcha/api.js?render=6LchglYpAAAAAABKj7CtiTlfvmPVN5eU2DzTVl2U"></script>
+<script>
+    grecaptcha.ready(function () {
+      grecaptcha
+        .execute("6LchglYpAAAAAABKj7CtiTlfvmPVN5eU2DzTVl2U", {
+          action: "subscription",
+        })
+        .then(function (token) {
+          document.getElementById("g-recaptcha-response").value = token;
+        });
+    });
+  </script>    
+<!-- import ORCiD Widget -->
     <script src="{% static 'javascript/orcid-widget.js' %}" type="text/javascript" defer></script>
 
     <div class="flex-this column w-90">
@@ -43,8 +55,8 @@
                 {% endif %}            
             </div>
 
-
-            <div>
+        <div class="flex-this w-100 space-between margin-top-2">
+            <div class='w-50 margin-right-1'>
                 <label for="primary_institution">Primary Institution</label>
                 <div class="tooltip"><strong>i</strong>
                     <span class="tooltiptext">If you are associated with an institution, please list your primary institution.</span>
@@ -54,6 +66,16 @@
                     <div class="msg-red w-80"><small>{{ form.primary_institution.errors.as_text }}</small></div> 
                 {% endif %}
             </div>
+            <div class="w-50 margin-left-1">
+                <label for="inquiry_type">Inquiry type</label>
+                <div class="tooltip"><strong>i</strong>
+                    <span class="tooltiptext">An institution inquiry type allows you to select the desired role for the subscription process.</span>
+                </div>
+                <br>
+                {{ subscription_form.inquiry_type }}
+            </div>
+
+        </div>
 
             <div class="w-100">
                 <div class="pad-top-1-5">
@@ -76,6 +98,11 @@
                     {% include 'partials/_alerts.html' %}
                 </div>
         
+                <input
+                type="hidden"
+                name="g-recaptcha-response"
+                id="g-recaptcha-response"
+                />
                 <div class="margin-top-8">
                     <button id="submitResearcher" class="primary-btn action-btn margin-top-2">Get Started <i class="fa fa-arrow-right"></i></button>
                 </div>
