api-key copy functionality added

--- a/templates/account-settings-base.html
+++ b/templates/account-settings-base.html
@@ -55,7 +55,7 @@
                 </a>
             {% endif %}
 
-            {% if institution and institution.is_subscribed %}
+            {% if institution %}
                 <a class="side-nav-a" href="{% url 'institution-api-key' institution.id %}">
                     <div class="side-nav-item {% if 'api-key' in request.path %} selected {% else %} grey-text {% endif %}">
                         <div class="w-20 margin-right-8"><i class="fa fa-code fa-3x" aria-hidden="true"></i></div>
