--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -31,11 +31,19 @@
                                     class="primary-btn blue-btn"
                                     href="{% url 'download-open-to-collaborate-notice-researcher' perm=otc_download_perm researcher_id=researcher.id %}"
                                 {% endif %}
-
                             {% endif %}
                             {% if institution %}
-                                class="primary-btn blue-btn"
-                                href="{% url 'download-open-to-collaborate-notice-institution' perm=otc_download_perm institution_id=institution.id %}"
+                                {% if not institution.is_subscribed %}
+                                    class="block a-disabled primary-btn blue-btn"
+                                    title="{% if not institution.is_submitted %}
+                                    The institution must be subscribed before download is available.
+                                    {% else %}
+                                    The subscription process of your institution is not completed yet.
+                                    {% endif %}"
+                                    {% else %}
+                                    class="primary-btn blue-btn"
+                                    href="{% url 'download-open-to-collaborate-notice-institution' perm=otc_download_perm institution_id=institution.id %}"
+                                {% endif %}
                             {% endif %}
                             >                            
                             Download Notice <i class="fa-regular fa-arrow-down-to-line"></i>
@@ -137,23 +145,24 @@
             {% if institution %}
                 <div class="flex-this align-center">
                     {% if member_role == 'admin' or member_role == 'editor' %}
-                        <a 
+                        <div class="btn-with-helptext">
+                            <a class="{% if not institution.is_subscribed or subscription.project_count == 0 %} primary-btn disabled-btn margin-top-2 helptext{% else %} primary-btn green-btn margin-top-2 {% endif %}" 
+                                href="{% if institution.is_subscribed and subscription.project_count != 0 %} {% url 'inst-create-project' institution.id %} {% else %} javascript:void(0){% endif %}">
+                                Create a Project <i class="fa fa-arrow-right"></i>
+                            </a>
                             {% if not institution.is_subscribed or subscription.project_count == 0 %}
-                                class="primary-btn disabled-btn margin-top-2"
-                                title= "{% if not institution.is_subscribed %}
-                                The subscription process of your institution is not completed yet.
-                                {% else %}
-                                Your institution has reached its Project limit.
-                                {% endif %}"
-                            {% else %} 
-                                class=" primary-btn green-btn margin-top-2" 
-                                href="{% if institution.is_subscribed and subscription.project_count != 0 %} {% url 'inst-create-project' institution.id %} {% else %} javascript:void(0){% endif %}"  
-                            {% endif %} >
-                            Create a Project     <i class="fa fa-arrow-right"></i>
-                        </a>
+                                <span class="btn-help-text">
+                                    {% if institution.is_subscribed == False %}
+                                        The subscription process of your institution is not completed yet. Please wait for the completion of the subscription process.
+                                    {% else %}
+                                        Your institution has reached its Project limit. Please upgrade your subscription plan to create more Projects.
+                                    {% endif %}
+                                </span>
+                            {% endif %}
+                        </div>
                     {% endif %}
                 </div>
-            {% endif %}        
+            {% endif %}      
         </div>        
     </div>
 
