--- a/templates/projects/projects.html
+++ b/templates/projects/projects.html
@@ -6,53 +6,60 @@
         <div class="flex-this space-between">
             <div class="w-60"><h2 class="no-top-margin">Local Contexts Projects</h2></div>
 
-            {% if  institution %}
-                {% if member_role == 'admin' or member_role == 'editor' %}
-                    <div class="btn-with-helptext flex-this align-center">
-                        <a 
-                        {% if not institution.is_subscribed or subscription.project_count == 0 %}
-                            class="primary-btn disabled-btn margin-top-2"
-                            title= "{% if not institution.is_subscribed %}
-                            The subscription process of your institution is not completed yet.
-                            {% else %}
-                            Your institution has reached its Project limit.
-                            {% endif %}"
-                        {% else %} 
-                            class=" primary-btn green-btn margin-top-2" 
-                            href="{% if institution.is_subscribed and subscription.project_count != 0 %} {% url 'inst-create-project' institution.id %} {% else %} javascript:void(0){% endif %}"  
-                        {% endif %} >
-                        Create a Project     <i class="fa fa-arrow-right"></i>
-                    </a>
-                    </div>
-                {% endif %}
-            {% elif community %}
-                {% if member_role == 'admin' or member_role == 'editor' %}
-                    <div class="btn-with-helptext flex-this align-center">
-                        <a 
-                            class=" primary-btn green-btn margin-top-2" 
-                            href="{% url 'create-project' community.id %}">  
-                        Create a Project  <i class="fa fa-arrow-right"></i>
-                    </a>
-                    </div>
-                {% endif %}
-            {% else %}
+            {% if community or institution %}
                 <div class="flex-this align-center">
-                    <a
-                    {% if not researcher.is_subscribed or subscription.project_count == 0 %}
-                        class="primary-btn margin-top-2 block disabled-btn"
-                        title="{% if not researcher.is_subscribed %}
-                        The subscription process of your account is not completed yet.
-                        {% else %}
-                        Your account has reached its Project limit.
-                        {% endif %}"
-                    {% else %}
-                        class="primary-btn green-btn margin-top-2"
-                        href="{% url 'researcher-create-project' researcher.id %}"
+                    {% if member_role == 'admin' or member_role == 'editor' %}
+                        <div class="btn-with-helptext">
+                            {% if institution%}
+                                <a class="{% if not institution.is_subscribed or subscription.project_count == 0 %} primary-btn disabled-btn margin-top-2 helptext{% else %} primary-btn green-btn margin-top-2 {% endif %}"
+                                    href="{% if institution.is_subscribed and subscription.project_count != 0 %} {% url 'inst-create-project' institution.id %} {% else %} javascript:void(0){% endif %}">
+                                    Create a Project <i class="fa fa-arrow-right"></i>
+                                </a>
+                            {% else %}
+                                <a class="primary-btn green-btn margin-top-2 "
+                                    href="{% url 'create-project' community.id %}">
+                                    Create a Project <i class="fa fa-arrow-right"></i>
+                                </a>
+                            {% endif %}
+                            {% if institution%}
+                                {% if not institution.is_subscribed or subscription.project_count == 0 %}
+                                    <span class="btn-help-text">
+                                        {% if institution.is_subscribed == False %}
+                                            The subscription process of your institution is not completed yet. Please wait for the completion of the subscription process.
+                                        {% else %}
+                                            Your institution has reached its Project limit. Please upgrade your subscription plan to create more Projects.
+                                        {% endif %}
+                                    </span>
+                                {% endif %}
+                            {% endif %}
+                        </div>
                     {% endif %}
-                    >
-                    Create a Project <i class="fa fa-arrow-right"></i>
-                </a>
                 </div>
+            {% else %}
+            <div class="btn-with-helptext">
+                {% if researcher%}
+                    <a class="{% if not researcher.is_subscribed or subscription.project_count == 0 %} primary-btn disabled-btn margin-top-2 helptext{% else %} primary-btn green-btn margin-top-2 {% endif %}"
+                        href="{% if researcher.is_subscribed and subscription.project_count != 0 %} {% url 'create-project' researcher.id %} {% else %} javascript:void(0){% endif %}">
+                        Create a Project <i class="fa fa-arrow-right"></i>
+                    </a>
+                {% else %}
+                    <a class="primary-btn green-btn margin-top-2 "
+                        href="{% url 'create-project' community.id %}">
+                        Create a Project <i class="fa fa-arrow-right"></i>
+                    </a>
+                {% endif %}
+                {% if researcher %}
+                    {% if not researcher.is_subscribed or subscription.project_count == 0 %}
+                        <span class="btn-help-text">
+                            {% if researcher.is_subscribed == False %}
+                                The subscription process of your account is not completed yet. Please wait for the completion of the subscription process.
+                            {% else %}
+                                Your account has reached its Project limit. Please upgrade your subscription plan to create more Projects.
+                            {% endif %}
+                        </span>
+                    {% endif %}
+                {% endif %}
+            </div>
             {% endif %}
         </div>
         <div class="w-70">
