--- a/templates/institutions/create-custom-institution.html
+++ b/templates/institutions/create-custom-institution.html
@@ -36,7 +36,7 @@
             <div class="w-50">
                 <label for="state_province_region">State, Province, or Region</label>
                 <div class="tooltip"><strong>i</strong>
-                    <span class="tooltiptext">By stating your location we will be able to connect your Projects with communities associated with this location.</span>
+                    <span class="tooltiptext left-tooltip">By stating your location we will be able to connect your Projects with communities associated with this location.</span>
                 </div>
                 
                 <br>
@@ -52,7 +52,7 @@
             <div class="w-50">
                 <label for="inquiry_type">Inquiry type</label>
                 <div class="tooltip"><strong>i</strong>
-                    <span class="tooltiptext">An institution inquiry type allows you to select the desired role for the subscription process.</span>
+                    <span class="tooltiptext left-tooltip">An institution inquiry type allows you to select the desired role for the subscription process.</span>
                 </div>
                 <br>
                 {{ subscription_form.inquiry_type }}
