--- a/templates/institutions/create-institution.html
+++ b/templates/institutions/create-institution.html
@@ -57,7 +57,7 @@
             <div class="w-50">
                 <label for="inquiry_type">Inquiry type</label>
                 <div class="tooltip"><strong>i</strong>
-                    <span class="tooltiptext">An institution inquiry type allows you to select the desired role for the subscription process.</span>
+                    <span class="tooltiptext left-tooltip">An institution inquiry type allows you to select the desired role for the subscription process.</span>
                 </div>
                 <br>
                 {{ subscription_form.inquiry_type }}
