--- a/templates/communities/upload-boundary-file.html
+++ b/templates/communities/upload-boundary-file.html
@@ -288,7 +288,8 @@
         successMessage.classList.toggle('invisible')
         sharePublicly.classList.toggle('invisible')
         // show and label ui elements
-        document.querySelector('#selected-title').innerText = geoJsonData.fileName
+        document.querySelector('#selected-title').innerText = geoJsonData.fileName || 'Uploaded Shapefile'
+          debugger
         document.querySelector('#selected-location').classList.remove('invisible')
         enableContinueButton()
 
