--- a/templates/communities/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/communities/update-boundary-via-native-land-and-shapefile.html
@@ -463,10 +463,11 @@
     async function setBoundary(self) {
         // do post call to set boundary in request
         showSpinner()
+        BoundaryPayLoad.share_boundary_publicly = document.getElementById("share-boundary-publicly").checked
+
         const response = await fetch("{% url 'update-community-boundary-data' community.id %}", {
             method: 'POST',
             body: JSON.stringify(BoundaryPayLoad),
-            share_boundary_publicly: document.getElementById("share-boundary-publicly").checked,
             headers: {
               'X-CSRFToken': '{{csrf_token}}'
             }
