--- a/templates/institutions/create-institution.html
+++ b/templates/institutions/create-institution.html
@@ -27,7 +27,7 @@
         {% csrf_token %}
 
         <div id="ror-input-container" class="margin-top-16">
-            <label for="institution_name">Institution Name</label>
+            <label for="institution_name">Institution Name<span class="orange-text">*</span></label>
             {{ form.institution_name }}
             <div id="suggestionsContainer"></div>
         </div>
@@ -55,7 +55,7 @@
             </div>
 
             <div class="w-50">
-                <label for="inquiry_type">Inquiry type</label>
+                <label for="inquiry_type">Inquiry type<span class="orange-text">*</span></label>
                 <div class="tooltip"><strong>i</strong>
                     <span class="tooltiptext left-tooltip">An institution inquiry type allows you to select the desired role for the subscription process.</span>
                 </div>
@@ -66,7 +66,7 @@
 
         <div class="w-100">
             <div class="pad-top-1-5">
-                <label for="description">Institution Description</label>
+                <label for="description">Institution Description<span class="orange-text">*</span></label>
                 <div class="tooltip"><strong>i</strong>
                     <span class="tooltiptext">An institution description allows you to share key public information about your institution or organization with other users on the Hub.</span>
                 </div>
@@ -79,12 +79,12 @@
 
         <div class="w-100 flex-this">
             <div class="w-50 margin-right-1">
-                <label class="pad-top-1-5" for="city_town">Contact name</label><br>
+                <label class="pad-top-1-5" for="city_town">Contact name<span class="orange-text">*</span></label><br>
                 {{ form.contact_name }}
             </div>
 
             <div class="w-50">
-                <label for="state_province_region">Contact Email</label><br>
+                <label for="state_province_region">Contact Email<span class="orange-text">*</span></label><br>
                 {{ form.contact_email }}
             </div>
         </div>
