feat: updated text

--- a/templates/communities/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/communities/update-boundary-via-native-land-and-shapefile.html
@@ -208,7 +208,7 @@
         <input type="checkbox" id="share-boundary-publicly"
                onchange="enableContinueButton()"
                {% if community.share_boundary_publicly %}checked{% endif %}>
-        <label for="share-boundary-publicly">Share Boundary Public</label>
+        <label for="share-boundary-publicly">Share Boundary Publicly</label>
     </div>
     <div class="save-cancel-container w-90 flex-this flex-start">
         <div>
