--- a/templates/communities/upload-boundary-file.html
+++ b/templates/communities/upload-boundary-file.html
@@ -172,7 +172,7 @@
         </div>
         <div id="share-boundary-publicly-wrapper" class="invisible">
             <input type="checkbox" id="share-boundary-publicly" name="share-boundary-publicly">
-            <label for="share-boundary-publicly">Share Boundary Public</label>
+            <label for="share-boundary-publicly">Share Boundary Publicly</label>
         </div>
     </div>
 
