--- a/templates/communities/add-community-boundary.html
+++ b/templates/communities/add-community-boundary.html
@@ -147,7 +147,7 @@
 
                 <div id="share-boundary-publicly-wrapper">
                     <input type="checkbox" id="share-boundary-publicly" name="share-boundary-publicly">
-                    <label for="share-boundary-publicly">Share Boundary Public</label>
+                    <label for="share-boundary-publicly">Share Boundary Publicly</label>
                 </div>
 
             </div>
