--- a/templates/account_settings_pages/_api-keys.html
+++ b/templates/account_settings_pages/_api-keys.html
@@ -25,7 +25,7 @@
                 <td class="bold">{{ name }}</td>
                 <td id="{{ id }}">{{ key }}</td>
                 <td><a id="copy-key" data-target="{{ id }}"><i class="fa-regular fa-clone pointer"></i></a></td>
-                <td><a id="delete-key" data-target="{{ id }}"><i class="fa-regular fa-trash pointer"></i></a></td>
+                <td><a id="delete-key" data-target="{{ id }}" data-name="{{ name }}"><i class="fa-regular fa-trash pointer"></i></a></td>
             </tr>
         {% endfor %}
     </table>
@@ -63,21 +63,8 @@
                 <div class="margin-top-8">
                     <label>API Key Name</label><br>
                     {{ form.name }}
-                    <div class="flex-this align-center space-between">
-                        <div class="text-align-right margin-right-1">
-                            <input type="checkbox" name="terms-agreement" required />
-                        </div>
-                        <div class="no-margin w-100">
-                            <p>
-                            <span>By checking this box, I am confirming that I have read & agree to the Local Contexts </span>
-                            <a
-                                href="#"
-                                target="_blank"
-                                rel="noopener"
-                                class="default-a"
-                            >API Terms</a>.
-                            </p>
-                        </div>
+                    <div class="no-margin w-100">
+                        <p class="red-text"><small>Please note you will not be able to change the name of this key. Once created, you can only copy or delete this key.</small></p>
                     </div>
                     {% if form.name.errors %}
                         <div class="msg-red w-50"><small>{{ form.name.errors.as_text }}</small></div>
@@ -110,13 +97,13 @@
 
         <div class="w-100">
             <div>
-                <p class="no-top-margin">Are you sure you want to delete this API key? This key will no longer be able to connect to the API and can effect your applications using this API key.</p>
+                <p class="no-top-margin">Are you sure you want to delete the API key: <span id="deleteKeyname" class="bold"></span>? This key will no longer be able to connect to the API and can effect your applications using this API key.</p>
             </div>
 
             <div class="flex-this">
                 <form id="deleteAPIKeyForm" method="POST">
                     {% csrf_token %}
-                    <button id="continueAPIKeyDeletionBtn" class="primary-btn white-btn" name="delete_api_key" value="{{ id }}">Yes, delete this API Key.</button>
+                    <button id="continueAPIKeyDeletionBtn" class="primary-btn white-btn" name="delete_api_key" value="">Yes, delete this API Key.</button>
                 </form>
                 <div id="closedeleteAPIKeymodal" class="primary-btn action-btn margin-left-8">Cancel</div>
             </div>
@@ -141,8 +128,9 @@
     deleteBtns.forEach(btn => {
         btn.addEventListener('click', () => {
             if (deleteAPIKeymodal.classList.contains('hide')) { 
-                deleteAPIKeymodal.classList.replace('hide', 'show')
-                continueAPIKeyDeletionBtn.value = btn.dataset.target
+                deleteAPIKeymodal.classList.replace('hide', 'show');
+                continueAPIKeyDeletionBtn.value = btn.dataset.target;
+                deleteKeyname.innerHTML = btn.dataset.name;
             }
         });
     });
