feat: change sizing of map

--- a/templates/public.html
+++ b/templates/public.html
@@ -111,7 +111,7 @@
         <div>
             <h3>Community Location</h3>
             <iframe src="{% url 'community-boundary-view' community.id %}"
-                    style="width:800px; height: 500px;">
+                    style="width: 100%; height: 450px; border: 1px solid cadetblue;">
             </iframe>
         </div>
         {% endif %}
