Updated the tooltip css to show inside div

--- a/templates/researchers/connect-researcher.html
+++ b/templates/researchers/connect-researcher.html
@@ -69,7 +69,7 @@
             <div class="w-50 margin-left-1">
                 <label for="inquiry_type">Inquiry type<span class="orange-text">*</span></label>
                 <div class="tooltip"><strong>i</strong>
-                    <span class="tooltiptext">An institution inquiry type allows you to select the desired role for the subscription process.</span>
+                    <span class="tooltiptext left-tooltip">An institution inquiry type allows you to select the desired role for the subscription process.</span>
                 </div>
                 <br>
                 {{ subscription_form.inquiry_type }}
