added different target type to open links

--- a/templates/projects/embed-project.html
+++ b/templates/projects/embed-project.html
@@ -216,7 +216,7 @@
                 </a>
             </div>
             <div class="font-size-14 align-center flex-this margin-right-8">
-                <a id="project-link" class="darkteal-text underline-hover bold pointer" href="{{project.project_page}}" onclick="openLinkInWindow('{{project.project_page}}')">Local Contexts Project: {{project.title}}</a>
+                <a id="project-link" class="darkteal-text underline-hover bold pointer" href="{{project.project_page}}" target="_top" rel="noopener noreferrer">Local Contexts Project: {{project.title}}</a>
             </div>
         </div>
     </body>
