--- a/templates/researchers/connect-researcher.html
+++ b/templates/researchers/connect-researcher.html
@@ -67,7 +67,7 @@
                 {% endif %}
             </div>
             <div class="w-50 margin-left-1">
-                <label for="inquiry_type">Inquiry type<span class="orange-text">*</span></label>
+                <label for="inquiry_type">Inquiry type<span class="orange-text required-label" title="">*</span></label>
                 <div class="tooltip"><strong>i</strong>
                     <span class="tooltiptext left-tooltip">An institution inquiry type allows you to select the desired role for the subscription process.</span>
                 </div>
@@ -79,7 +79,7 @@
 
             <div class="w-100">
                 <div class="pad-top-1-5">
-                    <label for="description">Researcher Description<span class="orange-text">*</span></label>
+                    <label for="description">Researcher Description<span class="orange-text required-label" title="">*</span></label>
                     <div class="tooltip"><strong>i</strong>
                         <span class="tooltiptext">This is a place for you to share your research interests and expertise.</span>
                     </div>
