--- a/templates/institutions/create-custom-institution.html
+++ b/templates/institutions/create-custom-institution.html
@@ -17,7 +17,7 @@
         {% csrf_token %}
 
         <div class="margin-top-16 w-100">
-            <label for="institution_name">Institution Name<span class="orange-text">*</span></label>
+            <label for="institution_name">Institution Name<span class="orange-text required-label" title="">*</span></label>
             {{ noror_form.institution_name }}
         </div>
 
@@ -50,7 +50,7 @@
                 {{ noror_form.country }}
             </div>
             <div class="w-50">
-                <label for="inquiry_type">Inquiry type<span class="orange-text">*</span></label>
+                <label for="inquiry_type">Inquiry type<span class="orange-text required-label" title="">*</span></label>
                 <div class="tooltip"><strong>i</strong>
                     <span class="tooltiptext left-tooltip">An institution inquiry type allows you to select the desired role for the subscription process.</span>
                 </div>
@@ -61,7 +61,7 @@
 
         <div class="w-100">
             <div class="pad-top-1-5">
-                <label for="description">Institution Description<span class="orange-text">*</span></label>
+                <label for="description">Institution Description<span class="orange-text required-label" title="">*</span></label>
                 <div class="tooltip"><strong>i</strong>
                     <span class="tooltiptext">An institution description allows you to share key public information about your institution or organization with other users on the Hub.</span>
                 </div>
@@ -74,12 +74,12 @@
 
         <div class="w-100 flex-this">
             <div class="w-50 margin-right-1">
-                <label class="pad-top-1-5" for="city_town">Contact name<span class="orange-text">*</span></label><br>
+                <label class="pad-top-1-5" for="city_town">Contact name<span class="orange-text required-label" title="">*</span></label><br>
                 {{ noror_form.contact_name }}
             </div>
 
             <div class="w-50">
-                <label for="state_province_region">Contact Email<span class="orange-text">*</span></label><br>
+                <label for="state_province_region">Contact Email<span class="orange-text required-label" title="">*</span></label><br>
                 {{ noror_form.contact_email }}
             </div>
         </div>
