--- a/localcontexts/static/css/main.css
+++ b/localcontexts/static/css/main.css
@@ -1162,6 +1162,10 @@ i[data-tooltip]:hover:after {
     transition: opacity 0.3s;
 }
 
+.left-tooltip {
+    margin-left: -286px !important;
+}
+
 .tooltiptext {
     padding: 10px;
     display: inline-block;
@@ -1178,6 +1182,11 @@ i[data-tooltip]:hover:after {
     border-width: 5px;
     border-style: solid;
     border-color: transparent transparent #EF6C00 transparent;
+}
+
+.left-tooltip::after {
+    left: 0% !important;
+    margin-left: 281px !important;
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
@@ -1689,4 +1698,34 @@ i[data-tooltip]:hover:after {
 }
 .subscribed-icon-wrapper{
     display: flex
+}
+
+.required-label {
+    position: relative;
+    cursor: pointer;
+}
+
+.required-label[title]::after {
+    content: "Required";
+    position: absolute;
+    bottom: 100%;
+    left: 89%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    white-space: nowrap;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s;
+    z-index: 1000;
+    pointer-events: none;
+}
+
+.required-label[title]:hover::after {
+    opacity: 1;
+    visibility: visible;
+    background-color: #EF6C00;
+    color: #fff;
 }
