--- a/templates/institutions/create-custom-institution.html
+++ b/templates/institutions/create-custom-institution.html
@@ -17,7 +17,7 @@
         {% csrf_token %}
 
         <div class="margin-top-16 w-100">
-            <label for="institution_name">Institution Name</label>
+            <label for="institution_name">Institution Name<span class="orange-text required-label" title="">*</span></label>
             {{ noror_form.institution_name }}
         </div>
 
@@ -36,7 +36,7 @@
             <div class="w-50">
                 <label for="state_province_region">State, Province, or Region</label>
                 <div class="tooltip"><strong>i</strong>
-                    <span class="tooltiptext">By stating your location we will be able to connect your Projects with communities associated with this location.</span>
+                    <span class="tooltiptext left-tooltip">By stating your location we will be able to connect your Projects with communities associated with this location.</span>
                 </div>
                 
                 <br>
@@ -44,14 +44,24 @@
             </div>
         </div>
 
-        <div>
-            <label class="pad-top-1-5" for="country">Country</label><br>
-            {{ noror_form.country }}                
+        <div class="margin-top-8 w-100 flex-this">
+            <div class="w-50 margin-right-1">
+                <label class="pad-top-1-5" for="country">Country</label><br>
+                {{ noror_form.country }}
+            </div>
+            <div class="w-50">
+                <label for="inquiry_type">Inquiry type<span class="orange-text required-label" title="">*</span></label>
+                <div class="tooltip"><strong>i</strong>
+                    <span class="tooltiptext left-tooltip">An institution inquiry type allows you to select the desired role for the subscription process.</span>
+                </div>
+                <br>
+                {{ subscription_form.inquiry_type }}
+            </div>
         </div>
 
         <div class="w-100">
             <div class="pad-top-1-5">
-                <label for="description">Institution Description</label>
+                <label for="description">Institution Description<span class="orange-text required-label" title="">*</span></label>
                 <div class="tooltip"><strong>i</strong>
                     <span class="tooltiptext">An institution description allows you to share key public information about your institution or organization with other users on the Hub.</span>
                 </div>
@@ -60,6 +70,18 @@
                 {{ noror_form.description }}
             </div>
             <small id="charCount" class="block text-align-right">200/200</small>
+        </div>
+
+        <div class="w-100 flex-this">
+            <div class="w-50 margin-right-1">
+                <label class="pad-top-1-5" for="city_town">Contact name<span class="orange-text required-label" title="">*</span></label><br>
+                {{ noror_form.contact_name }}
+            </div>
+
+            <div class="w-50">
+                <label for="state_province_region">Contact Email<span class="orange-text required-label" title="">*</span></label><br>
+                {{ noror_form.contact_email }}
+            </div>
         </div>
 
         <div class="flex-this space-between">
