Updated the admin tables link

--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -13,7 +13,7 @@
             &rsaquo; Dashboard
         </div>
         <div>
-            <a href="/admin/admin/">Admin Tables</a>
+            <a href="/admin/">Admin Tables</a>
         </div>
     </div>
 {% endblock %}
