--- a/templates/projects/projects.html
+++ b/templates/projects/projects.html
@@ -17,7 +17,7 @@
                                 </a>
                             {% else %}
                                 <a class="primary-btn green-btn margin-top-2 "
-                                    href="{% url 'create-project' community.id %}">
+                                    href="{% url 'community-create-project' community.id %}">
                                     Create a Project <i class="fa fa-arrow-right"></i>
                                 </a>
                             {% endif %}
